--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": " ",
+  "name": "TicTacApp",
   "version": "0.0.1",
   "description": "",
   "private": true,
   "keywords": [
-    ""
+    "tictacapp"
   ],
+  "type": "module",
   "license": "",
   "author": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "remove": "rm -rf ./dist",
+    "build": "tsc"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0",
-    "html-webpack-plugin": "^5.6.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0"
+    "typescript": "^5.6.3"
   }
 }
