--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Build code written in TS to JS and deploy static website
+name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
   # Runs on pushes targeting the default branch
@@ -40,5 +40,24 @@ jobs:
         run: npm install
       - name: Run build
         run: npm run build
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Build with Jekyll
+        run: ls -lah
+        with:
+          source: ./
+          destination: ./_site
+#      - name: Upload artifact
+#        uses: actions/upload-pages-artifact@v3
+
+  # Deployment job
+#  deploy:
+#    environment:
+#      name: github-pages
+#      url: ${{ steps.deployment.outputs.page_url }}
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#      - name: Deploy to GitHub Pages
+#        id: deployment
+#        uses: actions/deploy-pages@v4
