--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -44,9 +44,9 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
         run: ls -lah
-        with:
-          source: ./
-          destination: ./_site
+#        with:
+#          source: ./
+#          destination: ./_site
 #      - name: Upload artifact
 #        uses: actions/upload-pages-artifact@v3
 
