--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
   "license": "",
   "author": "",
   "scripts": {
+    "dev:sass": "sass --watch ./css/style.scss ./css/output.css",
+    "dev:tailwindcss": "tailwindcss build css/output.css -o css/tailwind-style.css --watch",
+    "build:sass": "sass ./css/style.scss ./css/output.css",
+    "build:tailwindcss": "tailwindcss build css/output.css -o css/tailwind-style.css",
+    "build:style": "npm run build:sass && npm run build:tailwindcss",
     "remove": "rm -rf ./dist",
-    "build": "tsc"
+    "build": "tsc && npm run build:style",
+    "dev:tsc": "tsc --watch",
+    "dev": "npm-run-all --parallel dev:tsc dev:sass dev:tailwindcss",
+    "browser-sync": "browser-sync start --server --files 'dist/**/*.js, index.html, css/tailwind-style.css'"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "browser-sync": "^3.0.3",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.49",
+    "sass": "^1.81.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
   }
 }
