--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "browser-sync": "browser-sync start --server --files 'dist/**/*.js, index.html, css/tailwind-style.css'"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "autoprefixer": "^10.4.20",
     "browser-sync": "^3.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.49",
     "sass": "^1.81.0",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
+    "webpack": "^5.96.1"
   }
 }
