--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "esnext",
+    "target": "es5",
+    "module": "es6",
     "rootDir": "./js",
     "sourceMap": true,
     "outDir": "./dist/js",
