--- a/package.json
+++ b/package.json
@@ -6,32 +6,39 @@
   "keywords": [
     "tictacapp"
   ],
-  "type": "module",
   "license": "",
   "author": "",
   "scripts": {
-    "dev:sass": "sass --watch ./css/style.scss ./css/output.css",
-    "dev:tailwindcss": "tailwindcss build -i css/output.css -o css/tailwind-style.css --watch",
-    "build:sass": "sass ./css/style.scss ./css/output.css",
-    "build:tailwindcss": "tailwindcss build -i css/output.css -o css/tailwind-style.css",
-    "build:style": "npm run build:sass && npm run build:tailwindcss",
-    "remove": "rm -rf ./dist",
-    "build": "tsc && npm run build:style",
-    "dev:tsc": "tsc --watch",
-    "dev": "npm-run-all --parallel dev:tsc dev:sass dev:tailwindcss",
-    "browser-sync": "browser-sync start --server --files 'dist/**/*.js, index.html, css/tailwind-style.css'"
+    "build": "rm -rf build && npx webpack --mode production",
+    "build:dev": "rm -rf build && npx webpack --mode development",
+    "dev": "webpack serve --mode development --stats-error-details"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "browser-sync": "^3.0.3",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.15",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
-    "webpack": "^5.96.1"
-  }
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
+  },
+  "browserslist": [
+    "> 0.25%",
+    "not dead",
+    "IE 11"
+  ]
 }
