--- a/package.json
+++ b/package.json
@@ -9,32 +9,19 @@
   "license": "",
   "author": "",
   "scripts": {
-    "build": "rm -rf build && npx webpack --mode production --env=production",
-    "build:dev": "rm -rf build && npx webpack --mode development --env=development",
-    "dev": "webpack serve --mode development --stats-error-details --env=development"
+    "preview:vite": "vite preview",
+    "built:vite": "rm -rf build & vite build",
+    "dev:vite": "vite"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.2.1",
-    "browser-sync": "^3.0.3",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.3",
-    "mini-css-extract-plugin": "^2.9.2",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.49",
-    "postcss-loader": "^8.1.1",
     "sass": "^1.81.0",
-    "sass-loader": "^16.0.3",
-    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.15",
-    "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "vite": "^6.0.0"
   },
   "browserslist": [
     "> 0.25%",
