--- a/.github/workflows/gh-pages-2.yml
+++ b/.github/workflows/gh-pages-2.yml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy TicTac App
+name: Deploy TicTac Game
 
 on:
   # Runs on pushes targeting the default branch
