--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@types/node": "^22.10.1",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "browser-sync": "^3.0.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "firebase": "11.0.2",
+    "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "npm-run-all": "^4.1.5",
@@ -40,5 +43,8 @@
     "> 0.25%",
     "not dead",
     "IE 11"
-  ]
+  ],
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  }
 }
