--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "declarationDir": "./build/types",
     "sourceMap": true,
     "lib": ["DOM", "ES2020"],
-    "types": [],
+    "types": ["node"],
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
   },
