--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TicTacApp",
+  "name": "tic-tac-app",
   "version": "0.0.1",
   "description": "",
   "private": true,
@@ -22,6 +22,8 @@
     "browser-sync": "^3.0.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "eslint": "^9.17.0",
+    "eslint-plugin-import": "^2.31.0",
     "firebase": "11.0.2",
     "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.6.3",
