--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "scripts": {
     "build": "rm -rf build && npx webpack --mode production --env=production",
     "build:dev": "rm -rf build && npx webpack --mode development --env=development",
-    "dev": "webpack serve --mode development --stats-error-details --env=development"
+    "dev": "webpack serve --mode development --stats-error-details --env=development",
+    "lint": "eslint app",
+    "lint:fix": "eslint app --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.1",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
@@ -26,6 +29,7 @@
     "eslint-plugin-import": "^2.31.0",
     "firebase": "11.0.2",
     "fs": "^0.0.1-security",
+    "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "npm-run-all": "^4.1.5",
@@ -37,6 +41,7 @@
     "tailwindcss": "^3.4.15",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.18.1",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
