--- a/.github/workflows/gh-pages-2.yml
+++ b/.github/workflows/gh-pages-2.yml
@@ -4,7 +4,7 @@ name: Deploy TicTac Game
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["firebase-multi-player"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -40,6 +40,14 @@ jobs:
         run: npm install
       - name: Run build
         run: npm run build
+        env:
+          FIREBASE_CONFIG_API_KEY: ${{ secrets.FIREBASE_CONFIG_API_KEY }}
+          FIREBASE_CONFIG_AUTH_DOMAIN: ${{ secrets.FIREBASE_CONFIG_AUTH_DOMAIN }}
+          FIREBASE_CONFIG_PROJECT_ID: ${{ secrets.FIREBASE_CONFIG_PROJECT_ID }}
+          FIREBASE_CONFIG_STORAGE_BUCKET: ${{ secrets.FIREBASE_CONFIG_STORAGE_BUCKET }}
+          FIREBASE_CONFIG_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_CONFIG_MESSAGING_SENDER_ID }}
+          FIREBASE_CONFIG_APP_ID: ${{ secrets.FIREBASE_CONFIG_APP_ID }}
+          FIREBASE_CONFIG_MEASUREMENT_ID: ${{ secrets.FIREBASE_CONFIG_MEASUREMENT_ID }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
