--- a/.github/workflows/gh-pages-main.yml
+++ b/.github/workflows/gh-pages-main.yml
@@ -63,21 +63,12 @@ jobs:
         node-version: [ 18 ] # Test on multiple Node.js versions
     needs: build
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-            node-version: ${{ matrix.node-version }}
-            cache: 'npm'
-      - name: Download artifact
-        run: mkdir -p ./build && cd ./build
+      - name: List files
+        run: ls -lah
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: my-artifact
-      - name: List files
-        run: ls -lah
-      - name: get out of directory
-        run: cd ..
+          path: ./build
       - name: List files
         run: ls -lah
