--- a/.github/workflows/webapp-dev-branches.yml
+++ b/.github/workflows/webapp-dev-branches.yml
@@ -1,10 +1,13 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Build and Deploy Tic-Tac-Toe Game
+# This workflow will build and deploy a static webapp to Netlify
+name: Build and Deploy Tic-Tac-Toe Game to https://tic-tac-toe-dev-app.netlify.app/
+
+env:
+  DO_NOT_RUN: false # Set to 'true' to skip jobs
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["uath-changed-bug"]
+    branches-ignore: ["main",'release-*'] # Skip if branch is main or release-webapp-*
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -15,6 +18,7 @@ permissions:
   pages: write
   id-token: write
 
+
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
@@ -24,6 +28,7 @@ concurrency:
 jobs:
   # Build job
   build:
+    if: env.DO_NOT_RUN == 'false' # Skip if DO_NOT_RUN is 'true'
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -54,8 +59,7 @@ jobs:
           name: my-artifact
           path: ./build/
 
-
-#  Deployment job
+  #  Deployment job
   deploy:
     runs-on: ubuntu-latest
     strategy:
@@ -83,5 +87,5 @@ jobs:
         run: ./scripts/netlify-deploy.sh
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID_DEV }}
           BUILD_DIR: ./build
