--- a/.github/workflows/webapp-main-branch.yml
+++ b/.github/workflows/webapp-main-branch.yml
@@ -83,5 +83,5 @@ jobs:
         run: ./scripts/netlify-deploy.sh
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID_QA }}
           BUILD_DIR: ./build
