--- a/.github/workflows/webapp-dev-branches.yml
+++ b/.github/workflows/webapp-dev-branches.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: 'yarn'
       - name: Install dependencies
         run: yarn install
       - name: Run build script with environment variables from GitHub Secrets
@@ -48,7 +48,7 @@ jobs:
           FIREBASE_CONFIG_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_CONFIG_MESSAGING_SENDER_ID }}
           FIREBASE_CONFIG_APP_ID: ${{ secrets.FIREBASE_CONFIG_APP_ID }}
           FIREBASE_CONFIG_MEASUREMENT_ID: ${{ secrets.FIREBASE_CONFIG_MEASUREMENT_ID }}
-        run: npm run build
+        run: yarn run webapp:build
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -69,7 +69,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: 'yarn'
       - name: Install Netlify CLI
         run: yarn global add netlify-cli
       - name: Move to web app directory
@@ -82,7 +82,7 @@ jobs:
           name: my-artifact
           path: ./build
       - name: Deploy to Netlify
-        run: ./scripts/netlify-deploy.sh
+        run: yarn run netlify:publish
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID_DEV }}
