--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "description": "TicTacToe app monorepo managed by Lerna",
   "scripts": {
-    "webapp:dev": "cd apps/web && npm run dev"
+    "webapp:dev": "cd apps/web && yarn run dev",
+    "webapp:build": "cd apps/web && yarn run build",
+    "webapp:build:dev": "cd apps/web && yarn run build:dev"
   },
   "devDependencies": {
     "lerna": "^8.1.9"
