--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "keywords": [
-    "tictacapp"
+    "tictacapp", "tic-tac-app"
   ],
   "license": "",
   "author": "",
