--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "webapp:dev": "cd apps/web && yarn run dev",
     "webapp:build": "cd apps/web && yarn run build",
-    "webapp:build:dev": "cd apps/web && yarn run build:dev"
+    "webapp:build:dev": "cd apps/web && yarn run build:dev",
+    "webapp:publish": "cd apps/web && yarn run netlify:publish"
   },
   "devDependencies": {
     "lerna": "^8.1.9"
