--- a/.github/workflows/webapp-dev-branches.yml
+++ b/.github/workflows/webapp-dev-branches.yml
@@ -82,4 +82,4 @@ jobs:
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID_DEV }}
-          BUILD_DIR: ./build
+          BUILD_DIR: ./apps/web/build
