--- a/.github/workflows/webapp-main-branch.yml
+++ b/.github/workflows/webapp-main-branch.yml
@@ -83,4 +83,4 @@ jobs:
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID_QA }}
-          BUILD_DIR: ./build
+          BUILD_DIR: ./apps/web/build
