--- a/.github/workflows/webapp-realease-branch.yml
+++ b/.github/workflows/webapp-realease-branch.yml
@@ -86,4 +86,4 @@ jobs:
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          BUILD_DIR: ./build
+          BUILD_DIR: ./apps/web/build
