--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "tictacapp"
   ],
   "license": "",
-  "author": "",
+  "author": "Jaimn Pandya",
   "scripts": {
     "build": "rm -rf build && npx webpack --mode production --env=production",
     "build:dev": "rm -rf build && npx webpack --mode development --env=development",
@@ -45,8 +45,8 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.18.1",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.1.0",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.0.0",
