--- a/.github/workflows/webapp-dev-branches.yml
+++ b/.github/workflows/webapp-dev-branches.yml
@@ -5,6 +5,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches-ignore: ["main",'release-*','monorepo-*'] # Skip if branch is main or release-webapp-*
+    paths:
+      - 'apps/web/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
