--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "webapp:dev": "cd apps/web && yarn run dev",
     "webapp:build": "cd apps/web && yarn run build",
     "webapp:build:dev": "cd apps/web && yarn run build:dev",
-    "webapp:publish": "cd apps/web && yarn run netlify:publish"
+    "webapp:publish": "cd apps/web && yarn run netlify:publish",
+    "lambda:layer:publish": "cd apps/lambda-functions && yarn run upsert-aws-layer"
   },
   "devDependencies": {
     "lerna": "^8.1.9"
