build and deploye Lambda Layer

--- a/.github/workflows/layer-dev-branches.yml
+++ b/.github/workflows/layer-dev-branches.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches-ignore: ["main",'release-*'] # Skip if branch is main or release-webapp-*
     paths:
-      - 'apps/lambda-functions/**'
+      - 'apps/lambda-functions/src/lf-pair-support-service-lambda/package.json'
       - '.github/workflows/layer-dev-branches.yml'
 
   # Allows you to run this workflow manually from the Actions tab
