--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "webapp:build": "cd apps/web && yarn run build",
     "webapp:build:dev": "cd apps/web && yarn run build:dev",
     "webapp:publish": "cd apps/web && yarn run netlify:publish",
-    "lambda:layer:publish": "cd apps/lambda-functions && yarn run upsert-aws-layer"
+    "lambda:layer:publish": "cd apps/lambda-functions && yarn run upsert-aws-layer",
+    "lambda:fn1:publish": "cd apps/lambda-functions/src/lf-pair-support-service-lambda && yarn run publish-aws-lambda"
   },
   "devDependencies": {
     "lerna": "^8.1.9"
