--- a/apps/lambda-functions/src/lf-pair-support-service-lambda/package.json
+++ b/apps/lambda-functions/src/lf-pair-support-service-lambda/package.json
@@ -5,8 +5,8 @@
   "main": "./src/index.ts",
   "type": "commonjs",
   "scripts": {
-    "build:dev": "../../node_modules/.bin/webpack --mode development --watch",
-    "build": "../../node_modules/.bin/webpack --mode production",
+    "build:dev": "../../node_modules/.bin/webpack --mode development --devtool true --watch",
+    "build": "../../node_modules/.bin/webpack --mode production --devtool false",
     "dev": "node app.js ./dist/bundle.js .env",
     "zip": "./scripts/zip-lambda.sh",
     "status-rule": "./scripts/aws-status-rule.sh",
